<resources>
    <string name="app_name">CapstoneProjectStage2</string>
    <string name="location_permission">Location Permission</string>
    <string name="dis_text">In order to request a service we will need to access your location to provide you the best services available near you</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user__home">User_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_search_start_ui">search_start_ui</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cite">cite</string>
    <string name="volume_n">volume_number</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ID_N">id</string>
    <string name="CASE_ID">caseid</string>
    <string name="FAV_CASE">Fav_cases</string>
    <string name="DONE">done</string>
    <string name="ONE">one</string>
    <string name="LOCATION">Location</string>
    <string name="UNABLE_ERROR2">Unable to get last location</string>
    <string name="PERMISSION">Permission</string>
    <string name="REQUEST">request</string>
    <string name="DENIED">Permission Denied</string>
    <string name="SETTING_LOC_HELP"><![CDATA[Permission is denied, Please go to settings>>app>>permissions, and allow app to use location.]]></string>
    <string name="CANCEL">Cancel</string>
    <string name="OK">OK</string>
    <string name="PACKAGE">package</string>
    <string name="PERMISSION_DENIED_ERR">Permission Denied</string>
    <string name="PROFESSIONALS">Professionals</string>
    <string name="LATI">lati</string>
    <string name="LONGI">longi</string>
    <string name="LOC">Location</string>
    <string name="USERS">Users</string>
    <string name="ID_U">id</string>
    <string name="FEW_THINGS">Add a few lines about yourself to describe you</string>
    <string name="LATI_R">lati</string>
    <string name="LONGI_R">longi</string>
    <string name="ADR_R">adr</string>
    <string name="REGISTER_R">Register</string>
    <string name="F_NAME_ERR">First Name is required</string>
    <string name="LAST_N_ERR">Last Name is Required</string>
    <string name="CO_N_ERR">Company Name is Required</string>
    <string name="PHONE_ERR">Phone Number is required</string>
    <string name="PASS_ERR">Password is required</string>
    <string name="DEFAULT_URL_R">default_URL</string>
    <string name="USERS_DB">Users</string>
    <string name="F_NAME_RR">First_name</string>
    <string name="LAST_RR">Last_name</string>
    <string name="COMPANY_N_R">Company_name</string>
    <string name="EMAIL_R">Email</string>
    <string name="ADRRESS_R">Adress</string>
    <string name="ABOUT_LBL">About_you</string>
    <string name="IMAGE_URL_R">imageURL</string>
    <string name="LOCATION_R_DB">Location</string>
    <string name="LATITUDE_F">Latitude</string>
    <string name="LONGITUDE_F">Longitude</string>
    <string name="VERIFY_SENT">A verification Email is sent to your email address</string>
    <string name="VERIFY_ERRR">SOMETHING WENT WRONG</string>
    <string name="LOCATION_M">Location</string>
    <string name="UNABLE_ERROR">Unable to get last location</string>
    <string name="LATI_M">lati</string>
    <string name="LONGI_M">longi</string>
    <string name="ADR_MM">adr</string>
    <string name="USER_M_ACT">Users</string>
    <string name="HOME_L">Home</string>
    <string name="USER_DB_U">Users</string>
    <string name="DEFAULT_URL_U">default_URL</string>
    <string name="SIGN_OUT">Sign Out</string>
    <string name="UPLOAD_DB">uploads</string>
    <string name="USER_ED">Users</string>
    <string name="DEFAULT_URL">default_URL</string>
    <string name="IMAGE_URL">imageURL</string>
    <string name="UPLOADING">uploading</string>
    <string name="FAILED">failed</string>
    <string name="NULL_IMAGE">No image selected</string>
    <string name="UPLOADING_MSG">uploading in progress</string>
    <string name="LOGIN_L">Login</string>
    <string name="EMAIL_ERRR">Email and Password Cannot be empty</string>
    <string name="PASS_ERRR">Password Should be atleast 5 Characters</string>
    <string name="VERIFY_MSG_L">Please Make Sure You have Verified the email before Logging in.</string>
    <string name="AUTH_FAIL">Authentification failed</string>
    <string name="SEARCH_S">Search</string>
    <string name="KEY_REQ">Keyword is Required</string>
    <string name="DATE_MAX">date_max</string>
    <string name="DATE_MIN">date_min</string>
    <string name="KEYWORD">key_word</string>
    <string name="RESULTS">Results</string>
    <string name="DATE_MIN_S">date_min</string>
    <string name="DATE_MAX_S">date_max</string>
    <string name="KEY_WORD_SS">key_word</string>
    <string name="DATE_MIN_FF">date_min</string>
    <string name="DATE_MAX_FF">date_max</string>
    <string name="KEYWORD_MX">key_word</string>
    <string name="HTTP">https</string>
    <string name="AUTHORITY">api.case.law</string>
    <string name="CASES_D">cases</string>
    <string name="SEARCH_D">search</string>
    <string name="D_DATE_MIN">decision_date_min</string>
    <string name="D_DATE_MAX">decision_date_max</string>
    <string name="RESULTS_JS">results</string>
    <string name="NAME_AB">name_abbreviation</string>
    <string name="DOCK_NUM">docket_number</string>
    <string name="DECISION_DATE">decision_date</string>
    <string name="PLEASE_WAIT">Please wait..</string>
    <string name="FAV_CASE_DB_C">Fav_cases</string>
    <string name="CASE_ID_CASE">caseid</string>
    <string name="JURI_C">jurisdiction</string>
    <string name="TITLE_DB">title</string>
    <string name="COURT_D">court</string>
    <string name="CITE_DB">cite</string>
    <string name="EXTRA_DETAILS">details_extra</string>
    <string name="ADDED_MSG">Added to your Bookmarks, Go to your BookMarks to see saved items.</string>
    <string name="CITATION_D">citations</string>
    <string name="VOLUME_D">volume</string>
    <string name="COURT_JS">court</string>
    <string name="JURI_JS">jurisdiction</string>
    <string name="N_ABV_S">name_abbreviation</string>
    <string name="TYPE_JS">type</string>
    <string name="CITE_JS_P">cite</string>
    <string name="D_DATE_J_R">decision_date</string>
    <string name="NAME_TT">name</string>
    <string name="NAME_LONG_D">name_long</string>
    <string name="PRO_D">profile Display Picture</string>
    <string name="F_NAME_LAY">Full Name</string>
    <string name="COMPANY_LAY">Company Name</string>
    <string name="DP_lay">Display Picture</string>
    <string name="use_location">Use Location</string>
    <string name="email_address_lay">Email Address</string>
    <string name="icon_lay">icon</string>
    <string name="pass_hint">Password</string>
    <string name="Log_in_lay">Log-In</string>
    <string name="app_logo_hint">APP LOGO</string>
    <string name="sign_layout">Sign In</string>
    <string name="register_lla">Register</string>
    <string name="current_location_layout">Current Location</string>
    <string name="placeholder">placeHolder</string>
    <string name="next_btn">Next</string>
    <string name="all">Use Location</string>
    <string name="background_layout">background</string>
    <string name="first_name_la_l">First Name</string>
    <string name="l_l">Last Name</string>
    <string name="hint_com">Company Name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="hitn_next">Next</string>
    <string name="c_l">Current Location</string>
    <string name="Next_lala">Next</string>
    <string name="background_image_lay">Background Image</string>
    <string name="keyword_layout">KEYWORD</string>
    <string name="s_now">Search Now</string>
    <string name="hello_lay">hello</string>
    <string name="details_lla">Details</string>
    <string name="c_la_c">Citation Details</string>
    <string name="c_d_c">Court Details</string>
    <string name="j_j_j">Juristiction</string>
    <string name="no_results_try_again">No results for this query. Make sure you have correct MINIMUM and MAXIMUM dates selected. Try to increase the date gap and check Keyword Spellings and try again.</string>
    <string name="display_picture_lal">display_picture</string>
    <string name="testtt">test</string>
    <string name="search_img_im">earch image</string>
    <string name="search_new_case_law">Search New Case Law</string>
    <string name="earch_image_im">earch image</string>
    <string name="open_saved_bookmarks">Open Saved Bookmarks</string>
    <string name="nearby_images_new">Nearby Images</string>
    <string name="search_nearby_professionals">Search Nearby Professionals</string>
    <string name="cit_new">citations</string>
    <string name="VOLUME_WID">volume</string>
    <string name="COURT_WID">court</string>
    <string name="JURI_WID">jurisdiction</string>
    <string name="TYPE_WID">type</string>
    <string name="NAM_ABRI_WID">name_abbreviation</string>
    <string name="D_DATE_WID">decision_date</string>
    <string name="NAME_WID">name</string>
    <string name="ABR_WID">(abr)</string>
    <string name="NAME_LONG_WID">name_long</string>
    <string name="NAAME_ABR_WID">name_abbreviation</string>
    <string name="NO_NEARBY_ERROR">No nearby Users found. Please try again</string>
    <string name="select_a_minimum_date">Select a minimum date</string>
    <string name="select_a_maximum_date">Select a maximum date</string>
    <string name="no_bookmarks_found_please_add_bookmarks_to_see_this_page">No Bookmarks Found, Please add bookmarks to see this page</string>
    <string name="EDIT_TITLE">Edit Profile</string>
</resources>
