<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".User_UI.User_Home"
    tools:showIn="@layout/app_bar_user__home">


  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:id="@+id/search_card"
        android:elevation="6dp"
        app:cardBackgroundColor="#F8C272"

       >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="120dp"
          android:src="@drawable/search"
          android:adjustViewBounds="true"
          android:alpha="0.6"
          android:scaleType="centerCrop"
          />
      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true">
      <ImageView
          android:layout_width="50dp"
          android:contentDescription="@string/search_img_im"
          android:layout_height="50dp"

          android:id="@+id/search_icon"
          android:src="@drawable/ic_search_black_24dp"
          android:layout_alignParentBottom="true"
          />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/search_new_case_law"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_toRightOf="@id/search_icon"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/search_icon" />

      </RelativeLayout>
</RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:id="@+id/Bookmarks_card"
        android:elevation="6dp"
        app:cardBackgroundColor="#2AADA1"
        android:layout_below="@id/search_card"
        android:layout_marginTop="18dp"

        >

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/books"
            android:alpha="0.7"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
          <ImageView
              android:layout_width="50dp"
              android:contentDescription="@string/earch_image_im"
              android:layout_height="50dp"
              android:padding="5dp"
              android:id="@+id/books_icon"
              android:src="@drawable/ic_collections_bookmark_black_24dp"
              android:layout_alignParentBottom="true"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="50dp"
              android:text="@string/open_saved_bookmarks"
              android:gravity="center"
              android:textStyle="bold"
              android:layout_toRightOf="@id/books_icon"
              android:layout_centerHorizontal="true"
              android:layout_alignParentBottom="true"
              android:layout_toEndOf="@id/books_icon" />

        </RelativeLayout>
      </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:id="@+id/nearby_card"
        android:elevation="6dp"
        app:cardBackgroundColor="#FA756B"
        android:layout_below="@id/Bookmarks_card"
        android:layout_marginTop="18dp"

        >

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:alpha="0.7"
            android:src="@drawable/law"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
          <ImageView
              android:layout_width="50dp"
              android:contentDescription="@string/nearby_images_new"
              android:layout_height="50dp"

              android:id="@+id/near_icon"
              android:src="@drawable/ic_people_black_24dp"
              android:layout_alignParentBottom="true"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="50dp"
              android:text="@string/search_nearby_professionals"
              android:gravity="center"
              android:textStyle="bold"
              android:layout_toRightOf="@id/near_icon"
              android:layout_centerHorizontal="true"
              android:layout_alignParentBottom="true"
              android:layout_toEndOf="@id/near_icon" />

        </RelativeLayout>
      </RelativeLayout>


    </androidx.cardview.widget.CardView>





  </RelativeLayout>
   </ScrollView>

