<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Search_query_UI.caseLaw_details_fragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:id="@+id/details_card_d"
       >
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@drawable/lawback"
           android:alpha="0.4">



       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:id="@+id/title_layout">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/title_txt"
               android:textAlignment="center"
               android:textColor="#000000"
               android:textStyle="bold"
               android:textSize="26sp"
              />
       </RelativeLayout>
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_below="@id/title_layout"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true">

           <TextView
               android:layout_width="wrap_content"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="5dp"
               android:id="@+id/dock_number"
               android:layout_height="wrap_content" />

       </RelativeLayout>
       </RelativeLayout>


   </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_card_d"
            android:id="@+id/details_extra"
            android:layout_marginTop="20dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/details_lla"
                    android:id="@+id/details_extra_lbl"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"


                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:id="@+id/details_extra_txt"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/details_extra_lbl"
                    />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>






    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_extra"
        android:id="@+id/cit_card"
        android:layout_marginTop="20dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/c_la_c"
                android:id="@+id/citation_lbl"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"


                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/citation_txt"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_below="@id/citation_lbl"
                />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cit_card"
            android:layout_marginTop="20dp"
            android:id="@+id/court_card"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/c_d_c"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/court_lbl"
                    android:textStyle="bold"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/court_txt"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/court_lbl"
                    />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/court_card"
            android:id="@+id/juri_card"
            android:layout_marginTop="20dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/j_j_j"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/juri_lbl"
                    android:textStyle="bold"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/juri_txt"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/juri_lbl"
                    />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/juri_card"
            android:id="@+id/fav_button"
            android:src="@drawable/ic_library_add_black_24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>


    </RelativeLayout>

</ScrollView>